[gd_scene load_steps=4 format=3 uid="uid://bxnfvq4gxtg02"]

[ext_resource type="Texture2D" uid="uid://fhna3aja22bf" path="res://assets/pause_button.png" id="1_3ar02"]
[ext_resource type="StyleBox" uid="uid://6ewmdbawapju" path="res://idk/button_style.tres" id="1_5up1f"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="1_bf3i0"]

[node name="Hud" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bf3i0")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 9.0
offset_right = 606.0
offset_bottom = 105.0
scale = Vector2(0.31338, 0.31338)
theme_override_font_sizes/font_size = 70
text = "Stars collected: 0"

[node name="PauseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 578.0
offset_top = 5.0
offset_right = 602.0
offset_bottom = 29.0
scale = Vector2(2.32527, 2.32527)
mouse_default_cursor_shape = 2
theme_override_styles/focus = ExtResource("1_5up1f")
theme_override_styles/hover_pressed = ExtResource("1_5up1f")
theme_override_styles/pressed = ExtResource("1_5up1f")
theme_override_styles/normal = ExtResource("1_5up1f")
icon = ExtResource("1_3ar02")
flat = true
icon_alignment = 1

[node name="ResumeButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 257.0
offset_top = 247.0
offset_right = 713.0
offset_bottom = 351.0
scale = Vector2(0.301742, 0.301742)
theme_override_font_sizes/font_size = 70
text = "Continue"
flat = true

[node name="MainMenuButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 185.0
offset_top = 205.0
offset_right = 1142.0
offset_bottom = 309.0
scale = Vector2(0.310089, 0.310089)
theme_override_font_sizes/font_size = 70
text = "Return to main menu"
flat = true

[node name="RestartButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 211.0
offset_top = 263.0
offset_right = 743.0
offset_bottom = 367.0
scale = Vector2(0.433318, 0.433318)
theme_override_font_sizes/font_size = 70
text = "Restart"
flat = true

[node name="FinalScoreLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 210.0
offset_top = 186.0
offset_right = 769.0
offset_bottom = 323.0
scale = Vector2(0.420059, 0.420059)
theme_override_font_sizes/font_size = 100
text = "Result:"
horizontal_alignment = 1

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
